Implement DedsiUser CRUD and query with EF Core
Added application, domain, and infrastructure layers for DedsiUser CRUD operations and queries, including DTOs, repository interfaces, and EF Core integration with MySQL. Refactored repository implementations to use generic base classes, updated dependency injection, and registered API endpoints. Moved error response model to middleware and removed obsolete file.

--- a/DedsiNative.HttpApi/appsettings.Development.json
+++ b/DedsiNative.HttpApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=localhost;port=3306;database=dedsi_native;user=root;password=Your_password123;sslmode=Preferred;"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
