--- a/DedsiNative.Application/DedsiNative.Application.csproj
+++ b/DedsiNative.Application/DedsiNative.Application.csproj
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DedsiNative.Domain\DedsiNative.Domain.csproj" />
+      <ProjectReference Include="..\DedsiNative.Infrastructure\DedsiNative.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Ulid" Version="1.4.1" />
     </ItemGroup>
 
 </Project>
