Refactor user query operations and update DI setup
Replaced DedsiUserQuery with ConditionalQueryOperation and DedsiUserGetByIdOperation for user queries. Updated DTO namespaces and moved files for consistency. Removed obsolete interfaces and base query classes. Refactored HTTP API endpoints to use new operations and updated dependency injection to register new query operation interfaces. Improved EntityFrameworkCore extension methods and connection string usage. Updated Serilog configuration and connection strings in appsettings files.

--- a/DedsiNative.HttpApi/appsettings.Development.json
+++ b/DedsiNative.HttpApi/appsettings.Development.json
@@ -1,16 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "server=localhost;port=3306;database=dedsi_native;user=root;password=Your_password123;sslmode=Preferred;"
-  },
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Debug",
-      "Override": {
-        "Microsoft": "Information",
-        "Microsoft.AspNetCore": "Warning",
-        "System": "Warning"
-      }
-    }
+    "DedsiNativeDB": "Server=47.109.146.107;Port=16033;Database=DedsiNativeDB;User Id=root;Password=mysqlAdmin123..;CharSet=utf8mb4;SslMode=None;Pooling=true;MinimumPoolSize=1;MaximumPoolSize=50;ConnectionReset=true;ConnectionTimeout=15;DefaultCommandTimeout=30;"
   }
 }
-
