--- a/DedsiNative.HttpApi/appsettings.json
+++ b/DedsiNative.HttpApi/appsettings.json
@@ -1,31 +1,5 @@
 {
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.AspNetCore": "Warning",
-        "System": "Warning"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/DedsiNative-Logs-.txt",
-          "rollingInterval": "Hour",
-          "retainedFileCountLimit": null,
-          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
-        }
-      }
-    ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DedsiNativeDB": "server=localhost;port=3306;database=dedsi_native;user=root;password=Your_password123;sslmode=Preferred;"
+  }
 }
