--- a/DedsiNative.HttpApi/DedsiNative.HttpApi.csproj
+++ b/DedsiNative.HttpApi/DedsiNative.HttpApi.csproj
@@ -12,10 +12,8 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-rc.1.25451.107" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.8.4" />
         <PackageReference Include="Scrutor" Version="6.1.0" />
-        <PackageReference Include="Serilog" Version="4.3.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-        <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+        <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
     </ItemGroup>
 
     <ItemGroup>
