--- a/content/DedsiNative.HttpApi/appsettings.Development.json
+++ b/content/DedsiNative.HttpApi/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DedsiNativeDB": "Server=47.109.146.107;Port=16033;Database=DedsiNativeDB;User Id=root;Password=mysqlAdmin123..;CharSet=utf8mb4;SslMode=None;Pooling=true;MinimumPoolSize=1;MaximumPoolSize=50;ConnectionReset=true;ConnectionTimeout=15;DefaultCommandTimeout=30;"
+    "DedsiNativeDB": "server=localhost;port=3306;database=dedsi_native;user=root;password=Your_password123;sslmode=Preferred;"
   }
 }
