--- a/content/DedsiNative.HttpApi/DedsiNative.HttpApi.csproj
+++ b/content/DedsiNative.HttpApi/DedsiNative.HttpApi.csproj
@@ -10,14 +10,14 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-rc.2.25502.107" />
-        <PackageReference Include="Scalar.AspNetCore" Version="2.9.0" />
+        <PackageReference Include="Scalar.AspNetCore" Version="2.10.1" />
         <PackageReference Include="Scrutor" Version="6.1.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DedsiNative.Application\DedsiNative.Application.csproj" />
+      <ProjectReference Include="..\DedsiNative.Operation\DedsiNative.Operation.csproj" />
     </ItemGroup>
 
     <ItemGroup>
