--- a/content/frameworks/Dedsi.Operation/Dedsi.Operation.csproj
+++ b/content/frameworks/Dedsi.Operation/Dedsi.Operation.csproj
@@ -5,4 +5,8 @@
 		<RootNamespace>Dedsi</RootNamespace>
 	</PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Ulid" Version="1.4.1" />
+    </ItemGroup>
+
 </Project>
